# fusilli

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  version.json
.github/: dependabot.yml
plugins/hipdnn-plugin/: CMakeLists.txt  README.md
plugins/hipdnn-plugin/build_tools/: FusilliPluginTestUtils.cmake  ThePebble.py  thepebble_config.toml
plugins/hipdnn-plugin/build_tools/cmake/: FusilliPluginDependencyUtils.cmake
plugins/hipdnn-plugin/include/: custom_op_opaque_data.h  graph_import.h  hipdnn_engine_plugin_execution_context.h  utils.h
plugins/hipdnn-plugin/src/: fusilli_plugin.cpp
plugins/hipdnn-plugin/test/: CMakeLists.txt  test_fusilli_plugin_api.cpp  test_graph_import.cpp  utils.h
samples/: CMakeLists.txt  sdpa_utils.cpp  sdpa_utils.h
samples/aot/: multi_backend.cpp  single_backend.cpp
samples/batchnorm/: batchnorm_infer_ncdhw_rank_matched.cpp  batchnorm_infer_nchw.cpp  batchnorm_infer_nchw_no_momentum.cpp  batchnorm_infer_nchw_rank_matched_scale_bias.cpp  batchnorm_infer_nchw_scale_bias.cpp  batchnorm_infer_nhwc_scale_bias.cpp  batchnorm_train_nchw.cpp  batchnorm_train_nchw_scale_bias.cpp  batchnorm_utils.h
samples/blocked_matmul/: blocked_matmul_basic.cpp
samples/convolution/: conv_dgrad_nhwc_krsc.cpp  conv_dgrad_nhwc_krsc_grouped.cpp  conv_fprop_grouped_with_relu_and_bias.cpp  conv_fprop_nchw_kcrs.cpp  conv_fprop_nchw_kcrs_grouped.cpp  conv_fprop_nhwc_krsc.cpp  conv_fprop_nhwc_krsc_with_pad.cpp  conv_fprop_with_bias.cpp  conv_fprop_with_relu.cpp  conv_fprop_with_relu_and_bias.cpp  conv_wgrad_nhwc_krsc.cpp  conv_wgrad_nhwc_krsc_grouped.cpp  conv_wgrad_nhwc_krsc_grouped_strided.cpp
samples/custom_op/: custom_op_add.cpp  custom_op_add_static.cpp  custom_op_add_static_transposed.cpp
samples/custom_op/sdpa/: sdpa_fprop_basic_mha.cpp  sdpa_fprop_causal.cpp  sdpa_fprop_cross_attn.cpp  sdpa_fprop_custom_scale.cpp  sdpa_fprop_dropout.cpp  sdpa_fprop_gqa.cpp  sdpa_fprop_gqa_hk_ne_hv.cpp  sdpa_fprop_with_mask.cpp  sdpa_utils.h
samples/dynamic_shapes/: conv_fprop_dynamic_batch.cpp  custom_op_dynamic_batch.cpp  reduction_min_max_dynamic_batch.cpp  sdpa_basic_dynamic_sequence.cpp
samples/layernorm/: layernorm_infer_nchw.cpp  layernorm_infer_nchw_scale_bias.cpp  layernorm_infer_nhwc_scale_bias.cpp  layernorm_train_nchw.cpp  layernorm_train_nchw_scale_bias.cpp  layernorm_train_nhwc_scale_bias.cpp  layernorm_utils.h
samples/matmul/: matmul_basic.cpp  matmul_basic_with_bias.cpp  matmul_batched.cpp  matmul_batched_with_bias.cpp  matmul_int4_fp16.cpp
samples/pointwise/: pointwise_add_transposed.cpp  pointwise_binary_bwd_ops.cpp  pointwise_binary_cmp_ops.cpp  pointwise_binary_ops.cpp  pointwise_bwd.cpp  pointwise_gen_index.cpp  pointwise_relu_bwd.cpp  pointwise_scalar_mul.cpp  pointwise_swish_bwd.cpp  pointwise_tanh_bwd.cpp  pointwise_ternary_ops.cpp  pointwise_unary_logical_ops.cpp  pointwise_unary_ops.cpp  pointwise_utils.h
samples/reduction/: reduction_ops.cpp
samples/rmsnorm/: rmsnorm_infer_nchw.cpp  rmsnorm_infer_nchw_scale.cpp  rmsnorm_infer_nhwc_scale.cpp  rmsnorm_infer_nhwc_scale_broadcast.cpp  rmsnorm_utils.h
samples/sdpa/: sdpa_fprop_basic_mha.cpp  sdpa_fprop_causal.cpp  sdpa_fprop_cross_attn.cpp  sdpa_fprop_custom_scale.cpp  sdpa_fprop_dropout.cpp  sdpa_fprop_generate_stats.cpp  sdpa_fprop_gqa.cpp  sdpa_fprop_gqa_hk_ne_hv.cpp  sdpa_fprop_gqa_independent_kv.cpp  sdpa_fprop_with_mask.cpp  sdpa_utils.h
tests/: CMakeLists.txt  pointwise_utils.h  test_asm_emitter_helpers.cpp  test_backend.cpp  test_batchnorm_attributes.cpp  test_batchnorm_node.cpp  test_buffer.cpp  test_cache.cpp  test_compile_command.cpp  test_compile_session.cpp  test_conv_node.cpp  test_custom_op.cpp  test_dllib.cpp  test_extras.cpp  test_float_types.cpp  test_graph.cpp  test_handle.cpp  test_int_types.cpp  test_layernorm_attributes.cpp  test_layernorm_node.cpp  test_logging.cpp  test_matmul_node.cpp  test_memstream.cpp  test_odr_repro.cpp  test_pointwise_node.cpp  test_process.cpp  test_reduction_attributes.cpp  test_reduction_node.cpp  test_rmsnorm_attributes.cpp  test_rmsnorm_node.cpp  test_sdpa_attributes.cpp  test_sdpa_node.cpp  test_tensor_attributes.cpp  test_utils.cpp  utils.h
tests/hip_tests/: hip_kernels.h  test_buffer.cpp  test_handle.cpp
tests/hip_tests/samples/: conv_fprop_nchw_kcrs.cpp
tests/lit/: test_asm_emitter.cpp  test_batchnorm_infer_asm_emitter_nchw.cpp  test_batchnorm_infer_asm_emitter_nchw_no_momentum.cpp  test_batchnorm_infer_asm_emitter_nchw_rank_matched.cpp  test_batchnorm_train_asm_emitter_nchw.cpp  test_blocked_matmul_asm_emitter.cpp  test_conv_asm_emitter_nchw_kcrs.cpp  test_conv_asm_emitter_nchw_kcrs_with_pad.cpp  test_conv_asm_emitter_nchw_krsc.cpp  test_conv_asm_emitter_ndhwc_kdrsc.cpp  test_conv_asm_emitter_ndhwc_kdrsc_grouped.cpp  test_conv_asm_emitter_nhwc_kcrs.cpp  test_conv_asm_emitter_nhwc_krsc.cpp  test_conv_asm_emitter_nhwc_krsc_grouped.cpp  test_conv_asm_emitter_nhwc_krsc_with_pad.cpp  test_conv_asm_emitter_nhwc_krsc_with_relu.cpp  test_conv_dgrad_asm_emitter_nhwc_kcrs.cpp  test_conv_dgrad_asm_emitter_nhwc_kcrs_grouped.cpp  test_conv_wgrad_asm_emitter_nhwc_krsc.cpp  test_conv_wgrad_asm_emitter_nhwc_krsc_grouped.cpp  test_conv_wgrad_asm_emitter_nhwc_krsc_grouped_strided.cpp  test_custom_op_asm_emitter.cpp  test_custom_op_asm_emitter_dim_placeholder.cpp  test_custom_op_asm_emitter_dup_input.cpp  test_custom_op_asm_emitter_dynamic_type.cpp  test_custom_op_asm_emitter_mixed_dtype.cpp  test_custom_op_asm_emitter_multi_output.cpp  test_custom_op_asm_emitter_multi_output_static.cpp  test_custom_op_asm_emitter_sdpa.cpp  test_custom_op_asm_emitter_static.cpp  test_custom_op_asm_emitter_static_transposed.cpp  test_layernorm_infer_asm_emitter_nchw.cpp  test_layernorm_infer_asm_emitter_scale_bias_nhwc.cpp  test_layernorm_infer_asm_emitter_scale_bias_nhwc_small_batch.cpp  test_layernorm_train_asm_emitter_nchw.cpp  test_layernorm_train_asm_emitter_scale_bias_nhwc.cpp  test_matmul_asm_emitter_basic.cpp  test_matmul_asm_emitter_batched.cpp  test_matmul_asm_emitter_broadcast.cpp  test_matmul_asm_emitter_broadcast_3D.cpp  (+79 more)
(+118 files in other folders)
